refactored the tests for notification service with the emailservice additions in mind